@@ -1,5 +1,6 @@
 package org.sergei.manager.service;
 
+import com.google.common.collect.ImmutableList;
 import lombok.extern.slf4j.Slf4j;
 import org.sergei.manager.jpa.model.Manufacturer;
 import org.sergei.manager.jpa.model.mappers.ManufacturerModelMapper;
@@ -49,12 +50,12 @@ public class ManufacturerServiceImpl implements ManufacturerService {
         List<Manufacturer> manufacturerList = manufacturerRepository.findAll();
         if (manufacturerList.isEmpty()) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("MAN-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         } else {
             List<ManufacturerDTO> manufacturerDTOList = manufacturerDTOListMapper.apply(manufacturerList);
 
             ResponseDTO<ManufacturerDTO> response = new ResponseDTO<>();
-            response.setErrorList(List.of());
+            response.setErrorList(ImmutableList.of());
             response.setResponse(manufacturerDTOList);
 
             return new ResponseEntity<>(response, HttpStatus.OK);
@@ -66,18 +67,18 @@ public class ManufacturerServiceImpl implements ManufacturerService {
         String code = request.getManufacturerCode();
         if (code == null) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("RP-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         } else {
             Optional<Manufacturer> manufacturer = manufacturerRepository.findByCode(code);
             if (manufacturer.isEmpty()) {
                 log.debug("Manufacturer with code: {} not found", code);
                 List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("MAN-001");
-                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
             } else {
                 ManufacturerDTO manufacturerDTO = manufacturerDTOMapper.apply(manufacturer.get());
 
                 ResponseDTO<ManufacturerDTO> response = new ResponseDTO<>();
-                response.setErrorList(List.of());
+                response.setErrorList(ImmutableList.of());
                 response.setResponse(List.of(manufacturerDTO));
 
                 return new ResponseEntity<>(response, HttpStatus.OK);
@@ -90,7 +91,7 @@ public class ManufacturerServiceImpl implements ManufacturerService {
         Manufacturer manufacturer = manufacturerModelMapper.apply(request);
         Manufacturer savedManufacturer = manufacturerRepository.save(manufacturer);
         ManufacturerDTO manufacturerResponse = manufacturerDTOMapper.apply(savedManufacturer);
-        return new ResponseEntity<>(new ResponseDTO<>(List.of(), List.of(manufacturerResponse)), HttpStatus.CREATED);
+        return new ResponseEntity<>(new ResponseDTO<>(ImmutableList.of(), List.of(manufacturerResponse)), HttpStatus.CREATED);
     }
 
 
@@ -99,18 +100,18 @@ public class ManufacturerServiceImpl implements ManufacturerService {
         String code = request.getManufacturerCode();
         if (code == null) {
             List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("RP-001");
-            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+            return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
         } else {
             Optional<Manufacturer> manufacturer = manufacturerRepository.findByCode(code);
             if (manufacturer.isEmpty()) {
                 log.debug("Manufacturer with code: {} not found", code);
                 List<ResponseErrorDTO> responseErrorList = messageService.responseErrorListByCode("MAN-001");
-                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, List.of()), HttpStatus.NOT_FOUND);
+                return new ResponseEntity<>(new ResponseDTO<>(responseErrorList, ImmutableList.of()), HttpStatus.NOT_FOUND);
             } else {
                 Manufacturer updatedManufacturer = manufacturerModelMapper.apply(request);
                 Manufacturer savedManufacturer = manufacturerRepository.save(updatedManufacturer);
                 ManufacturerDTO manufacturerDTOResponse = manufacturerDTOMapper.apply(savedManufacturer);
-                return new ResponseEntity<>(new ResponseDTO<>(List.of(), List.of(manufacturerDTOResponse)), HttpStatus.OK);
+                return new ResponseEntity<>(new ResponseDTO<>(ImmutableList.of(), List.of(manufacturerDTOResponse)), HttpStatus.OK);
             }
         }
     }
